# emp-bt

./: .gitignore  CMakeLists.txt  README.md  check.sh  execute
cmake/: emp-azkgc-config.cmake
config/: alice.json  bob.json
data/: alice.in  alice.tmp  bob.in  gen  gen.cpp
emp-arith/: ari_eva.h  ari_gen.h  arithmetic.h  arithmetic_eva.h  arithmetic_execution.h  arithmetic_gen.h  constant.h  emp-arith.cpp  emp-arith.h  hash_idx.h  number.h  number.hpp  numeric.h  semihonest.h
emp-azkgc/: ari_plain_eva.h  ari_privacy_free_eva.h  ari_privacy_free_gen.h  arithmetic_plain_eva.h  arithmetic_zk.h  arithmetic_zk_eva.h  arithmetic_zk_gen.h  emp-azkgc.cpp  emp-azkgc.h  hash_idx.h  number.h  number.hpp  numeric.h  real.h  semihonest.h  thread_buffer.h
emp-bt/: cir.h  num.h  num.hpp  wire.h  wire.hpp
test/: bench.cpp  brent.cpp  editdis.cpp  int.cpp  mem.cpp  neg.cpp  num.cpp  real.cpp  root.cpp  simple.cpp  sw.cpp  sw_plain.cpp  test.cpp
